--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "description": "Identity management REST service",
     "require": {
         "php": ">=5.6",
-        "zendframework/zendframework": "~2.4"
+        "zendframework/zendframework": "~2.4",
+        "xpwales/xpwales-identity": "dev-master"
     }
 }
