--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=5.6",
         "zendframework/zendframework": "~2.4",
-        "xpwales/xpwales-identity": "dev-master"
+        "xpwales/xpwales-identity": "dev-master",
+        "xpwales/xpwales-identity-map": "dev-master"
     }
 }
