--- a/src/application/config/autoload/local.php.dist
+++ b/src/application/config/autoload/local.php.dist
@@ -12,4 +12,12 @@
  */
 
 return array(
+    'phpSettings'   => array(
+        'display_startup_errors'  => false,
+        'display_errors'          => false,
+    ),
+    'view_manager' => array(
+        'display_not_found_reason' => false,
+        'display_exceptions'       => false,
+    ),
 );
